Attempt to resolve mobile codeblock wrapping

--- a/src/components/post/CodeBlock/code-block.css
+++ b/src/components/post/CodeBlock/code-block.css
@@ -1,7 +1,7 @@
 pre.codeblock {
 	background-color: black;
 	font-family: var(--monospace-font), monospace;
-	overflow-x: auto;
+	overflow: auto;
 	tab-size: 4;
 	speak-as: literal-punctuation;
 }
